kubernetes/catalog/mysql/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/UNRA1DUser/unraid-docker-templates/main/templates/MySQL.xml
# Category: Tools-Utilities, Other, Network-Other
# Stars: 16116 | Downloads: 4929384415
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysql
    spec:
      securityContext:
        fsGroup: 100
        runAsUser: 99
        runAsGroup: 100
      containers:
        - name: mysql
          image: mysql
          args:
            - "mysqld"
            - "--log-error=/var/log/mysql/error.log"
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mysql-tcp-por
          startupProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 3306
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3306
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: mysql-data-0
              mountPath: "/var/lib/mysql"
            - name: mysql-data-1
              mountPath: "/var/log/mysql"
            - name: mysql-data-2
              mountPath: "/etc/mysql"
            - name: mysql-data-3
              mountPath: "/data"
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
      volumes:
      - name: mysql-data-0
        persistentVolumeClaim:
          claimName: mysql-data-0
      - name: mysql-data-1
        persistentVolumeClaim:
          claimName: mysql-data-1
      - name: mysql-data-2
        persistentVolumeClaim:
          claimName: mysql-data-2
      - name: mysql-data-3
        persistentVolumeClaim:
          claimName: mysql-data-3
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql
  labels:
    app.kubernetes.io/name: mysql
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql-tcp-por
  type: ClusterIP
