kubernetes/catalog/mysql/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mysql
  namespace: mysql
  labels:
    app.kubernetes.io/name: mysql
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mysql.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: mysql
          port: 3306
  tls:
    secretName: int-rlservers-com-tls
